por mudar write
Co-authored-by: edsonCVN <edsonCVN@users.noreply.github.com>

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
         "assert.h": "c",
         "string.h": "c",
         "pthread.h": "c",
-        "unistd.h": "c"
+        "unistd.h": "c",
+        "errno.h": "c"
     }
 }
