--- a/tecnicofs_ex2/Makefile
+++ b/tecnicofs_ex2/Makefile
@@ -14,7 +14,7 @@ INCLUDES = $(addprefix -I, $(INCLUDE_DIRS))
 SOURCES  := $(wildcard */*.c)
 HEADERS  := $(wildcard */*.h)
 OBJECTS  := $(SOURCES:.c=.o)
-TARGET_EXECS := fs/tfs_server tests/client_server_simple_test tests/lib_destroy_after_all_closed_test_variation tests/lib_destroy_after_all_closed_test
+TARGET_EXECS := fs/tfs_server tests/client_server_simple_test
 
 # VPATH is a variable used by Makefile which finds *sources* and makes them available throughout the codebase
 # vpath %.h <DIR> tells make to look for header files in <DIR>
@@ -70,7 +70,7 @@ tests/client_server_simple_test: tests/client_server_simple_test.o client/tecnic
 fs/tfs_server: fs/operations.o fs/state.o
 tests/lib_destroy_after_all_closed_test: tests/lib_destroy_after_all_closed_test.o fs/operations.o fs/state.o
 tests/lib_destroy_after_all_closed_test_variation: tests/lib_destroy_after_all_closed_test_variation.o fs/operations.o fs/state.o
-
+tests/2_clients_1_shutdown: tests/2_clients_1_shutdown.o client/tecnicofs_client_api.o
 test1:
 	./tests/lib_destroy_after_all_closed_test
 
@@ -80,6 +80,8 @@ test2:
 test3:
 	./tests/client_server_simple_test
 
+test4:
+	./tests/2_clients_1_shutdown
 tests:
 	./tests/lib_destroy_after_all_closed_test
 	./tests/lib_destroy_after_all_closed_test_variation
